# Claude-Code-Launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  TEST_REPORT.md  TODO.md  build.rs
assets/: Info.plist  app.rc
docs/: ARCHITECTURE.md  DESIGN_BASELINE.md  REQUIREMENTS.md  REQUIREMENTS_BASELINE.md  TASK_DAG.md
docs/superpowers/plans/: 2026-05-29-bugfix-plan.md
docs/superpowers/specs/: 2026-05-29-bugfix-spec.md
iced_winit_local/src/: program.rs
scripts/: package-dmg.sh
src/: admin.rs  lib.rs  main.rs
src/core/: backup_manager.rs  config_injector.rs  config_migrator.rs  group_manager.rs  mod.rs  models.rs  project_manager.rs  templates_manager.rs
src/gui/: app.rs  main_view.rs  mod.rs  project_card.rs  theme.rs  widgets.rs
src/gui/dialogs/: add_project.rs  edit_project.rs  mod.rs  project_config.rs  settings.rs
src/launcher/: mod.rs  terminal_launcher.rs
tests/: debug_projects.rs  debug_template.rs  integration_test.rs  real_world_test.rs  test_real_template.rs
