[package]
name = "claude-launcher"
version = "2.1.0"
edition = "2024"
description = "Claude Code Launcher - A Windows GUI tool for managing and launching Claude Code projects"
authors = ["akchth"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Akchth/claude-launcher"
keywords = ["claude", "claude-code", "launcher", "gui", "iced"]
categories = ["gui"]

[dependencies]
iced = { version = "0.13", features = ["tokio", "image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "claude-launcher"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
