[package]
name = "claude-launcher"
version = "2.2.1"
edition = "2024"
description = "Claude Code Launcher - A Windows GUI tool for managing and launching Claude Code projects"
authors = ["akchth"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Akchth/claude-launcher"
keywords = ["claude", "claude-code", "launcher", "gui", "iced"]
categories = ["gui"]

[dependencies]
iced = { version = "0.13", features = ["tokio", "image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "claude-launcher"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[patch.crates-io]
iced_winit = { path = "iced_winit_local" }
